<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp"
    android:paddingBottom="10dp"
    android:background="@color/white">

    <ImageView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/cart_paper"/>

    <RelativeLayout
        android:id="@+id/rlCartContents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <com.brain_socket.photocafe.view.TextViewCustomFont
            android:id="@+id/tvOrderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:textSize="@dimen/ts_text_normal"
            android:textColor="@color/txt_black"
            android:text="@string/activity_main_cart_contents_order_label"
            app:fontId="1"/>

        <com.brain_socket.photocafe.view.TextViewCustomFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:textSize="@dimen/ts_text_normal"
            android:textColor="@color/txt_black"
            android:layout_gravity="top|right"
            android:text="@string/activity_main_cart_contents_quantity_label"
            app:fontId="1"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCartItems"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/tvOrderLabel"></android.support.v7.widget.RecyclerView>

        <com.brain_socket.photocafe.view.TextViewCustomFont
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/rvCartItems"
            android:padding="6dp"
            android:textSize="@dimen/ts_text_normal"
            android:textColor="@color/txt_light_yellow"
            android:text="@string/activity_main_cart_contents_reset_button"
            app:fontId="1"/>

        <com.brain_socket.photocafe.view.TextViewCustomFont
            android:id="@+id/tvSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/rvCartItems"
            android:padding="6dp"
            android:textSize="@dimen/ts_text_normal"
            android:textColor="@color/txt_white"
            android:background="@drawable/shape_submit_button_bg"
            android:text="@string/activity_main_cart_contents_submit_button"
            app:fontId="1"/>

    </RelativeLayout>


    <com.brain_socket.photocafe.view.TextViewCustomFont
        android:id="@+id/tvCartEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/ts_text_normal"
        android:textColor="@color/txt_black"
        android:text="@string/activity_main_cart_contents_empty"
        app:fontId="1"/>

</FrameLayout>