<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_gravity="bottom"
        android:alpha="0.6"
        android:background="@drawable/cardboard_surface"/>


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:padding="10dp"
        android:src="@drawable/side_logo"/>

    <LinearLayout
        android:id="@+id/llLanguageButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_brown_dark_button_badge"
            android:text="@string/activity_language_select_btn_english"/>

        <Button
            android:id="@+id/btnArabic"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/shape_brown_dark_button_badge"
            android:text="@string/activity_language_select_btn_arabic"/>

    </LinearLayout>

    <com.brain_socket.photocafe.view.TextViewCustomFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/llLanguageButtons"
        android:layout_alignRight="@id/llLanguageButtons"
        android:layout_below="@id/llLanguageButtons"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/ts_text_normal"
        android:textColor="@color/txt_white"
        android:text="@string/activity_splash_screen_copy_right"
        app:fontId="1"/>

</RelativeLayout>
